--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "chai": "*",
     "mocha": "*",
     "selenium-webdriver": "^4.3.1",
-    "webdriverio": "^7.20.5"
+    "webdriverio": "8.3.2"
   },
   "devDependencies": {
-    "@wdio/cli": "*",
+    "@wdio/cli": "^8.3.2",
     "@wdio/local-runner": "*",
     "@wdio/mocha-framework": "*",
     "@wdio/sync": "*",
